<resources>
    <string name="app_name">fashionsApp</string>
    <string name="welcome">Welcome,</string>
    <string name="our_fashions_app">Our Fashions App</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="view_all">View All</string>
    <string name="search">Search ...</string>
    <string name="get_now">Get Now</string>
    <string name="_50_off">50% Off</string>
    <string name="on_everything_today">On everything today</string>
    <string name="code">With code: FSCREATION</string>
    <string name="title">Roller Rabbit</string>
    <string name="note">Traveler Tote</string>
    <string name="money">$195.00</string>
    <string name="add_to_card">Add to card</string>
    <string name="_198_00">$198.00</string>
    <string name="total_price">Total Price</string>
    <string name="get_a_little_lift_from_these_sam_edelman_sandals_featuring_ruched_straps_and_leather_lace_up_ties_while_a_braided_jute_sole_makes_a_fresh_statement_for_summer">Get a little lift from these Sam Edelman sandals featuring ruched straps and leather lace-up ties, while a braided jute sole makes a fresh statement for summer.</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="_320_review">(320 Review)</string>
    <string name="avaliable_in_stok">Avaliable in stok</string>
    <string name="vado_odelle_dress">Vado Odelle Dress</string>
    <string name="roller_rabbit">Roller Rabbit</string>
    <string name="s">S</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>